Closed Bug 1313551 Opened 8 years ago Closed 8 years ago

MediaDecoderStateMachine.cpp can't be indexed by Eclipse since bug 1312321

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

http://searchfox.org/mozilla-central/rev/8cf1367dd89cc36ef8f025dfc6af6d5c086838a7/dom/media/MediaDecoderStateMachine.cpp#236

It looks like the trailing return type can't be parsed by Eclipse. I will use a function template to detect the return type of S::Enter().
Assignee: nobody → jwwang
Blocks: 1295892
Priority: -- → P3
Attachment #8805403 - Flags: review?(jacheng)
My Eclipse Neon can work with original code without this modification.

But for solving compatibility, r+ for this patch.
Comment on attachment 8805403 [details]
Bug 1313551 - fix the traling return type of StateObject::SetState() so it can be indexed correctly by Eclipse.

https://reviewboard.mozilla.org/r/89124/#review88286
Attachment #8805403 - Flags: review?(jacheng) → review+
Thanks!
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/81b62062f019
fix the traling return type of StateObject::SetState() so it can be indexed correctly by Eclipse. r=JamesCheng
https://hg.mozilla.org/mozilla-central/rev/81b62062f019
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.