Bug 1313551 - fix the traling return type of StateObject::SetState() so it can be indexed correctly by Eclipse. r=JamesCheng

MozReview-Commit-ID: 8FQuSJ0pgrB